--- a/Aula03MathServlet/web/index.html
+++ b/Aula03MathServlet/web/index.html
@@ -16,11 +16,18 @@ and open the template in the editor.
 
         <h3>Conteúdo Dinâmico - Servlets</h3>
         <h4><a href="dados-pessoais.html">Dados do desenvolvedor</a></h4>
-        <h4><a href="calculos.html">Operações matemáticas</a></h4>
+        <hr/>
+        <h3>OPERAÇÕES MATEMÁTICAS</h3>
         <form action="calculos.html">
-            <input type="number" step="0.1" name="n1" value="1.0"/>            
-            <input type="number" step="0.1" name="n1" value="1.0"/>            
-            <input type="number" step="1" name="operacao" value="1.0"/>
+            <h5>N1</h5>
+            <input type="number" step="0.1" name="n1" value="1.0"/> 
+            <br/>
+            <h5>N2</h5>
+            <input type="number" step="0.1" name="n2" value="1.0"/> 
+            <br/>
+            <h5>Operação</h5>
+            <p>Digite '1' para "soma"; '2' para "subtração"; '3' para "multiplicação" ou '4' para "divisão"</p>
+            <input type="number" name="operacao"/>
             <input type="submit" value="Calcular"/>
         </form>
     </body>
